@@ -1,6 +1,11 @@
 # ChangeLog file for sql/src/backends/monet5
 # This file is updated with mchangelog (Gentoo echangelog bastard script)
 
+  08 Jun 2009; Fabian Groffen <fabian@cwi.nl> monetdb.c:
+  Avoid multiple questions by merging them into a single confirmation for the
+  destroy command.  This accidently fixes a bug where a response such as 'yes'
+  would abort the next database removal.
+
   04 Jun 2009; Fabian Groffen <fabian@cwi.nl> merovingian.1, merovingian.c:
   Implemented a configurable port for the neighbour discovery service. This
   also allows to entirely disable neighbour discovery by setting
